--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@ngx-translate/http-loader": "^2.0.0",
     "cordova-android": "7.1.4",
     "cordova-ios": "4.5.5",
-    "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
